# OOP-Challenges

BankAccounts/: Account.cpp  Account.h  Account_Utility.cpp  Account_Utility.h  CMakeLists.txt  Checking_Account.cpp  Checking_Account.h  Printable.cpp  Printable.h  Saving_Account.cpp  Saving_Account.h  Trust_Account.cpp  Trust_Account.h  main.cpp
LibraryManagement_System/: Book.cpp  Book.h  CMakeLists.txt  MangeBooks.h  README.md  main.cpp
MyString/: CMakeLists.txt  MyString.cpp  MyString.h  README.md  main.cpp
